[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qodevices"
version = "0.1.7.2"
authors = [
  { name="Thormund", email="thormund@nus.edu.sg" },
]
maintainers = [
  { name="Thormund", email="thormund@nus.edu.sg" },
]
description = "Driver files for the-fibre-lab"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "LeCroyDSO @ git+ssh://git@github.com/the-fibre-lab/lecroydso.git@main",
    "pyserial",
    "python-usbtmc @ git+https://github.com/python-ivi/python-usbtmc.git@master",
    "pyusb",
    "PyVISA",
    "PyVISA-py",
    "numpy"
]

# [tool.setuptools]
# packages = ["qodevices"]
# package-dir = {"" = "qodevices"}

# [tool.setuptools.package-dir]
# qodevices = "qodevices"

[tool.setuptools.packages.find]
# where = ["qodevices"]
# include = ["*"]
exclude = ["*_constructor"]
namespaces = false

# [project.urls]
# "Homepage" = https://github.com/the-fibre-lab/python-drivers
# "Bug Tracker" = https://github.com/the-fibre-lab/python-drivers/issues
